Fix: Improve a11y with color contrast and form labels

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,12 +18,11 @@ ul, li {
 	color: #333;
 }
 a {
-	color: orange;
+	color: #733300;
 	text-decoration: none;
 }
 a:hover, a:focus {
 	color: #3397db;
-	text-decoration: none;
 }
 a img{
 	border: none 0px #fff;
@@ -40,8 +39,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   min-height: 100%;
 }
 #footer {
-  background-color: #444;
-  color: #aaa;
+  background-color: #d2d1d1;
+  color: #121111;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
@@ -239,8 +238,11 @@ nav h1 a {
   margin: 0;
   font-size: 11pt;
 }
+label {
+	display: none;
+}
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #2f1d0f;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
